--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,6 +15,7 @@ jobs:
         id: docker_meta
         with:
           images: equt/playground
+      - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
         if: github.event_name != 'pull_request'
         with:
