--- a/espanso/default.yml
+++ b/espanso/default.yml
@@ -64,6 +64,9 @@ matches:
   - trigger: \mf
     replace: \mathsf{$|$}
 
+  - trigger: \ds
+    replace: \displaystyle
+
   - trigger: ;oe
     replace: ö
 
